# Abagnale

./: CMakeLists.txt  INTRO.txt  LICENSE.txt  LICENSES.txt  Makefile  README.txt  abagnale.c  abagnale.conf  abagnale.demo  abagnale.h  abagnale.service  abagnalectl.c  algorithm-trend.c  array.c  array.h  charset.c  charset.h  compat-msc.h  config.h  config.y  database-postgresql.pgc  database-postgresql.sql  database.h  database.sql  exchange-coinbase.c  exchange.c  exchange.h  heap-reallocarray.c  heap.c  heap.h  heap_reallocarray.c  host.h  http.c  http.h  json.c  json.h  main.c  map.c  map.h  math-postgresql.c  (+25 more)
.github/workflows/: cmake-multi-platform.yml  codeql.yml  makefile.yml
